<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walrus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wallrus_intro">Wallrus is a tool for collecting and organizing things you love!</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>

    <color name="background">#f2f2f2</color>
    <color name="white">#ffffff</color>
    <color name="border">#ebebec</color>
    <color name="wallrus_orange">#f94a00</color>
    <color name="black">#000000</color>
    <color name="gray">#939393</color>
    <color name="lightgray">#E4E4E3</color>

    <string name="title_activity_news_feed">NewsFeedActivity</string>

    <color name="light_gray">#e0e0e0</color>
    <color name="transparent">#0000</color>
    <color name="background_gray">#f2f2f2</color>
    <color name="boardname_gray">#999999</color>

    <string name="title_activity_follow">FollowActivity</string>
    <string name="title_activity_boards">BoardsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string-array name="user_names">
        <item>Angeli</item>
        <item>Ristel</item>
        <item>Yumi</item>
        <item>Daryl</item>
    </string-array>
    <string-array name="user_names_2">
        <item>Kevin</item>
        <item>Ernest</item>
        <item>Kim</item>
        <item>Ken</item>
    </string-array>
    <string-array name="captions">
        <item>Wanderlust</item>
        <item>Diva</item>
        <item>Inspired</item>
        <item>Loved</item>
    </string-array>
    <string-array name="captions_2">
        <item>Explorer</item>
        <item>Lost</item>
        <item>Happy</item>
        <item>Energetic</item>
    </string-array>
    <string-array name="descriptions">
        <item>Wonderful</item>
        <item>Beautiful</item>
        <item>Lovely</item>
        <item>Soon</item>
    </string-array>
    <string-array name="pinImage">
        <item>@drawable/flower1</item>
        <item>@drawable/flower2</item>
        <item>@drawable/dress</item>
        <item>@drawable/hands</item>
    </string-array>
    <string-array name="pinImage_2">
        <item>@drawable/pin1</item>
        <item>@drawable/pin2</item>
        <item>@drawable/pin3</item>
        <item>@drawable/pin4</item>
    </string-array>
    <string-array name="userImage">
        <item>@drawable/angeli</item>
        <item>@drawable/ristel</item>
        <item>@drawable/yumi</item>
        <item>@drawable/daryl</item>
    </string-array>
    <string-array name="userImage_2">
        <item>@drawable/kevin</item>
        <item>@drawable/ernest</item>
        <item>@drawable/marc</item>
        <item>@drawable/ken</item>
    </string-array>
    <string-array name="smallImages">
        <item>@drawable/animals</item>
        <item>@drawable/archi</item>
        <item>@drawable/art</item>
        <item>@drawable/cars</item>
    </string-array>
    <string-array name="categories">
        <item>All</item>
        <item>Popular</item>
        <item>Animals</item>
        <item>Art</item>
        <item>Architechture</item>
        <item>Cars</item>
    </string-array>
    <string-array name="smallImages2">
        <item>@drawable/all</item>
        <item>@drawable/popular</item>
        <item>@drawable/animals</item>
        <item>@drawable/art</item>
        <item>@drawable/archi</item>
        <item>@drawable/cars</item>
    </string-array>
    <string-array name="descriptions2">
        <item>All in one Place!</item>
        <item>What is trending</item>
        <item>All about animals</item>
        <item>All about art</item>
        <item>All about architechture</item>
        <item>All about cars</item>
    </string-array>

    <string name="title_activity_more_profile">MoreProfileActivity</string>
    <string name="title_activity_boards_fragment">BoardsFragment</string>
    <string name="title_activity_about_fragment">AboutFragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    
    <string name="registerForm">Please fill in the following fields.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="retypePassword">Re-type password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="email">Email Address</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="month">Month</string>

    <string-array name="monthList">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="day">Day</string>

    <string-array name="dayList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>24</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="year">Year</string>

    <string-array name="yearList">
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
    </string-array>

    <string name="birthdate">Birthdate</string>
    <string name="selectdate">Select birthdate</string>

</resources>
