<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white" >
	
   <TextView 
       	android:id="@+id/register_textViewErrorMessage"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/registerForm"
    	android:paddingLeft="20dp" 
    	android:paddingTop="10dp"
    	android:paddingBottom="10dp"
    	android:paddingRight="100dp"
    	android:background="@color/lightgray"/>
   
 	<ScrollView 
 	    android:layout_below="@id/register_textViewErrorMessage"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    >
	 	
	 	<LinearLayout
	 	    android:id="@+id/registerArea"
	 	    android:layout_width="fill_parent"
	 	    android:layout_height="wrap_content"
	 	    android:paddingLeft="16dp"
	 		android:paddingRight="16dp"
	 	    android:orientation="vertical"
	 	     >
	
	 	    <EditText
	 	        android:id="@+id/register_editTextFirstName"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/firstName"
	 	         />
	
	 	    <EditText
	 	        android:id="@+id/register_editTextLastName"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/lastName"
	 	        />
	
	 	    <EditText
	 	        android:id="@+id/register_editTextEmail"
	 			android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/email"
	 	        android:inputType="textEmailAddress"
	 	   />
	
	 	    <EditText
	 	        android:id="@+id/register_editTextUserName"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/username"
	 	         />
	
	 	    <EditText
	 	        android:id="@+id/register_editTextPassword"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/password"
	 	         />
	
	 	    <EditText
	 	        android:id="@+id/register_editTextRetypePassword"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="48dp"
	 	        android:layout_marginTop="4dp"
	 	        android:layout_marginBottom="4dp"
	 	        android:hint="@string/retypePassword"
	 	        />
			<!-- 
	 	    <Spinner
	 	        android:id="@+id/register_spinnerGender"
	 	        android:layout_width="90dp"
	 	        android:layout_height="match_parent"
	 	        android:entries="@array/genderList"
	 	        android:prompt="@string/gender" />
			-->
			
			
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="8dp"
			    android:layout_marginTop="4dp"
			    android:layout_marginBottom="4dp"
			    android:text="@string/gender"
			   	/>  
			
			<View
			android:layout_width="wrap_content"
			android:layout_height="1dp"
			android:background="@android:color/black"
			android:layout_marginBottom="7dp" />
			
			<RadioGroup 
			    android:id="@+id/register_radioGroupGender"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="4dp"
			    android:layout_marginBottom="4dp" >
			
			<RadioButton 
			    android:id="@+id/register_radioMale"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/male" 
			    android:checked="true"
			    android:layout_marginRight="70dp"/>
			
			<RadioButton
			    android:id="@+id/register_radioFemale"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/female"
			    android:layout_marginBottom="7dp" />	
			    
			</RadioGroup>
			
	 	    <!-- START Datepicker 11.22.2013 Ernest -->
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="4dp"
			    android:orientation="horizontal">
			
				<EditText
				    android:id="@+id/register_editTextBirthdate"
				    android:layout_width="0dp"
				    android:layout_height="48dp"
				    android:layout_weight="3"
				    android:layout_marginTop="4dp"
				    android:layout_marginBottom="4dp"
				    android:layout_marginRight="4dp"
				    android:hint="@string/birthdate"
				    android:inputType="date"
				    >
				</EditText>
				 <Button 
				    android:id="@+id/register_buttonDatepicker"
				    android:text="@string/selectdate"
				    android:layout_weight="2"
				    android:layout_width="0dp"
				    android:layout_marginTop="4dp"
				    android:layout_marginBottom="4dp"
				    android:layout_marginLeft="4dp"
				    android:layout_height="40dp"
				    android:background="@color/lightgray"
				    android:paddingLeft="4dp"
				    android:paddingRight="4dp"
				    android:onClick="selectDate" />
			</LinearLayout>
			<!-- END Datepicker 11.22.2013 Ernest -->

 		</LinearLayout> 
    </ScrollView>
</RelativeLayout>


