<FrameLayout 
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android">
    
    
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
        <RelativeLayout 
            android:id="@+id/activityHome_loginSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:background="@drawable/border">
		    <TextView 
		        android:id="@+id/activityHome_introText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="4dp"
		        android:paddingBottom="4dp"
		        android:lines="2"
		        android:text="@string/wallrus_intro"
		        android:gravity="center"/>
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="4dp"
		        android:paddingBottom="4dp"
		        android:layout_below="@id/activityHome_introText">
		        <Button 
		            android:id="@+id/home_login"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="35dp"
		            android:layout_marginLeft="4dp"
		            android:layout_marginRight="4dp"
		            android:text="@string/login"
		            android:background="@drawable/border"
		            android:textSize="14sp"/>
		        <Button 
		            android:id="@+id/home_register"
		            android:layout_width="0dp"
		            android:layout_weight="1"
    		        android:layout_height="35dp"
		            android:layout_marginLeft="4dp"
		            android:layout_marginRight="4dp"
		            android:text="@string/signup"
		            android:background="@drawable/rounded_orange"
		            android:textColor="@color/white"
		            android:textSize="14sp"/>
		    </LinearLayout>
            
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@id/activityHome_loginSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:baselineAligned="true">
            <LinearLayout 
                android:id="@+id/home_leftLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:orientation="vertical">
                
                
            </LinearLayout>
            <LinearLayout 
                android:id="@+id/home_rightLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="vertical">
               
               
                
            </LinearLayout>
        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>
    
    
</FrameLayout>

